# guidance-for-generative-ai-deployments-using-amazon-sagemaker-jumpstart

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  package.json  pyproject.toml
config/: config.toml
simple_generative_ai_service/: config.py  jumpstart_async_endpoint_construct.py  jumpstart_model_construct.py  repo_stack.py  service_endpoint_stack.py  service_pipeline_stack.py  service_stage.py
simple_generative_ai_service/amazonlinux-bundle/: Dockerfile
simple_generative_ai_service/asset-input/: bundle_asset.sh
simple_generative_ai_service/lambda/extract_image/: index.py  pyproject.toml  test_image_data.json
simple_generative_ai_service/lambda/save_message/: index.py  pyproject.toml
util/: generate_image.py  test_request.json
