[tool.poetry]
name = "extract-image"
version = "1.0.0"
description = ""
authors = [
    "Constantin Gonzalez <glez@amazon.com>",
    "Robert Hanuschke <robhan@amazon.com>",
]
packages = [{ include = "extract_image" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.162"
pillow = "^10.0.1"
aws-lambda-powertools = "^2.18.0"
boto3-stubs = { extras = ["s3"], version = "^1.26.162" }


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
